syntax = "proto3";
package com.fpm2025.wallet;

service WalletService {
  rpc ListWallets(ListWalletsRequest) returns (ListWalletsResponse);
  rpc CreateWallet(CreateWalletRequest) returns (WalletResponse);
  rpc UpdateWallet(UpdateWalletRequest) returns (WalletResponse);
  rpc DeleteWallet(DeleteWalletRequest) returns (WalletResponse);
  rpc GetLedger(GetLedgerRequest) returns (GetLedgerResponse);
}

message Wallet {
  string wallet_id = 1;
  string name = 2;
  string type = 3; // cash, card, bank
  double balance = 4;
}

message ListWalletsRequest {
  string user_id = 1;
}

message ListWalletsResponse {
  repeated Wallet wallets = 1;
}

message CreateWalletRequest {
  string user_id = 1;
  string name = 2;
  string type = 3;
  double initial_balance = 4;
}

message UpdateWalletRequest {
  string wallet_id = 1;
  string name = 2;
  string type = 3;
}

message DeleteWalletRequest {
  string wallet_id = 1;
}

message WalletResponse {
  bool success = 1;
  Wallet wallet = 2;
}

message GetLedgerRequest {
  string wallet_id = 1;
}

message LedgerEntry {
  string transaction_id = 1;
  string date = 2;
  double amount = 3;
  string type = 4; // debit/credit
}

message GetLedgerResponse {
  repeated LedgerEntry entries = 1;
}
